--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
       "inline"
     ],
     "website": "https://github.com/JOSProjects/IMDb-Movie-Bot",
-    "repository": "https://github.com/JOSProjects/IMDb-Movie-Bot",
+    "repository": "https://github.com/noble9810",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
